fix webclipper doc

--- a/docs/assets/stylesheets/style.css
+++ b/docs/assets/stylesheets/style.css
@@ -1,5 +1,5 @@
 .md-typeset {
-    line-height: 1.8;
+    line-height: 1.6;
 }
 
 .md-typeset code{
